--- a/index.html
+++ b/index.html
@@ -2,229 +2,203 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Aegis Sentinel™️ V5 – Full Accessibility</title>
+<title>Aegis Sentinel™️ V6 Enterprise</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 <style>
-body{margin:0;font-family:'Cairo',sans-serif;background:radial-gradient(circle at top,#001a12,#000);color:#00ffb3;transition:0.3s;}
+body{
+margin:0;
+font-family:'Cairo',sans-serif;
+background:radial-gradient(circle at top,#001a12,#000);
+color:#00ffb3;
+transition:0.5s;
+}
 header{text-align:center;padding:20px;border-bottom:1px solid #00ffb333;}
-.lang-switch{margin-top:10px;}
-button{background:#000;color:#00ffb3;border:1px solid #00ffb3;padding:6px 14px;border-radius:8px;cursor:pointer;margin:3px;}
-.container{max-width:1100px;margin:20px auto;padding:25px;background:rgba(0,20,15,0.9);border-radius:20px;}
-textarea{width:100%;height:130px;background:#000;border:2px solid #00ffb3;border-radius:15px;padding:15px;color:#00ffb3;font-size:15px;resize:none;transition: all 0.3s ease;}
-textarea:hover{box-shadow:0 0 25px #00ffb3;transform: scale(1.02);border-color:#00fff0;}
-.flex{display:flex;gap:20px;flex-wrap:wrap;margin-top:20px;}
-.card{flex:1;min-width:280px;background:#000;padding:20px;border-radius:15px;box-shadow:0 0 20px #00ffb322;}
+button{
+background:#000;color:#00ffb3;border:1px solid #00ffb3;
+padding:6px 14px;border-radius:8px;cursor:pointer;margin:3px;
+}
+.container{
+max-width:1200px;margin:20px auto;padding:25px;
+background:rgba(0,20,15,0.95);
+border-radius:20px;
+}
+textarea{
+width:100%;height:140px;background:#000;
+border:2px solid #00ffb3;border-radius:15px;
+padding:15px;color:#00ffb3;font-size:15px;
+resize:none;
+}
+.card{
+background:#000;padding:20px;border-radius:15px;
+box-shadow:0 0 20px #00ffb322;margin-top:15px;
+}
 .progress{height:12px;background:#111;border-radius:10px;margin-top:10px;}
 .bar{height:100%;width:0%;background:#00ffb3;border-radius:10px;transition:0.5s;}
+.log{max-height:150px;overflow:auto;font-size:12px;background:#111;padding:10px;border-radius:10px;}
 footer{text-align:center;padding:15px;font-size:12px;border-top:1px solid #00ffb333;}
+.alertMode{
+background:radial-gradient(circle at top,#330000,#000)!important;
+color:#ff4d4d!important;
+}
 </style>
 </head>
+
 <body>
 
 <header>
-<h1 id="title">🛡 Aegis Sentinel™️ V5</h1>
-<p id="subtitle">Full Accessibility SOC Simulation Platform</p>
-<div class="lang-switch">
-<button onclick="setLang('en')">English</button>
-<button onclick="setLang('ar')">العربية</button>
-</div>
+<h1>🛡 Aegis Sentinel™️ V6 Enterprise</h1>
+<p>Advanced SOC Simulation Platform</p>
+<button onclick="exportReport()">Export Report</button>
+<button onclick="toggleAdmin()">Admin Mode</button>
 </header>
 
 <div class="container">
-<textarea id="msg" placeholder="Paste suspicious message here for analysis..."></textarea>
-<div class="flex">
+
+<textarea id="msg" placeholder="Paste suspicious message here..."></textarea>
+
 <div class="card">
-<h3 id="threatLabel">Threat Status</h3>
+<h3>Threat Status</h3>
 <p id="status">—</p>
-<p><span id="riskText">Risk Score</span>: <span id="score">0</span>%</p>
+<p>Risk Score: <span id="score">0</span>%</p>
 <div class="progress"><div class="bar" id="bar"></div></div>
-<p id="classification"></p>
-<p><strong>Domain Reputation:</strong> <span id="domainRep">—</span></p>
+<p id="mitre">MITRE: —</p>
+<p>Incident ID: <span id="incident">—</span></p>
 </div>
 
 <div class="card">
-<h3>MITRE Mapping</h3>
-<p id="mitre">—</p>
-<h3 id="feedLabel">Live Feed</h3>
+<h3>Threat Intelligence Feed</h3>
 <p id="feed">System Ready...</p>
 </div>
 
 <div class="card">
-<h3 id="statsLabel">Statistics</h3>
+<h3>Statistics</h3>
 <canvas id="chart"></canvas>
 </div>
+
+<div class="card">
+<h3>Incident Log</h3>
+<div class="log" id="log"></div>
 </div>
+
 </div>
 
 <footer>
-Aegis Sentinel™️ V5 – Full Accessibility SOC Simulation Platform
+Aegis Sentinel™️ V6 Enterprise – Simulation Only
 </footer>
 
-<!-- Sounds -->
-<audio id="highSound"><source src="https://assets.mixkit.co/active_storage/sfx/2571/2571-preview.mp3"></audio>
-<audio id="mediumSound"><source src="https://assets.mixkit.co/active_storage/sfx/2568/2568-preview.mp3"></audio>
-<audio id="safeSound"><source src="https://assets.mixkit.co/active_storage/sfx/270/270-preview.mp3"></audio>
-<audio id="switchSound"><source src="https://assets.mixkit.co/active_storage/sfx/2562/2562-preview.mp3"></audio>
-<audio id="hoverSound"><source src="https://assets.mixkit.co/active_storage/sfx/2572/2572-preview.mp3"></audio>
-
 <script>
-// ====== Variables ======
-let lang='en';
+
 let stats={safe:0,medium:0,high:0};
+let admin=false;
 
-// ====== Texts ======
-const texts={
-en:{
-title:"🛡 Aegis Sentinel™️ V5",
-subtitle:"Full Accessibility SOC Simulation Platform",
-threatLabel:"Threat Status",
-riskText:"Risk Score",
-statsLabel:"Statistics",
-feedLabel:"Live Feed",
-statusSafe:"Safe",
-statusMedium:"Suspicious",
-statusHigh:"High Risk",
-classificationSafe:"Low Risk Content",
-classificationMedium:"Suspicious Social Engineering",
-classificationHigh:"Advanced Phishing Attack",
-feedReady:"System Ready...",
-adviceSafe:"Message appears safe.",
-adviceMedium:"Message may contain phishing/SCAM, verify source.",
-adviceHigh:"High risk! Do NOT click links or share information!",
-hoverMsg:"Type your message here..."
-},
-ar:{
-title:"🛡 أيجيس سنتينل™️ V5",
-subtitle:"منصة شاملة لاختبار التهديدات للمكفوفين",
-threatLabel:"حالة التهديد",
-riskText:"نسبة الخطورة",
-statsLabel:"الإحصائيات",
-feedLabel:"التغذية المباشرة",
-statusSafe:"آمن",
-statusMedium:"مشبوه",
-statusHigh:"خطر عالي",
-classificationSafe:"محتوى منخفض الخطورة",
-classificationMedium:"تصيد اجتماعي مشبوه",
-classificationHigh:"هجوم تصيّد متقدم",
-feedReady:"النظام جاهز...",
-adviceSafe:"الرسالة آمنة.",
-adviceMedium:"قد تحتوي الرسالة على تصيّد/احتيال، تحقق من المصدر.",
-adviceHigh:"خطر عالي! لا تضغط على الروابط أو تشارك معلومات!",
-hoverMsg:"اكتب الرسالة هنا..."
-}
-};
-
-// ====== Suspicious Words List (All your words included) ======
-const words=[
-"قم بالدخول إلى حسابك","تحديث الحساب","الإجراء المطلوب","فعّل الآن","مضاد للفيروسات",
-"تغيير كلمة المرور","انقر للتحقق","أكد بياناتك","معلومات سرية","سايبر مونداي","اختراق البيانات",
-"حمل الآن","إشعار نهائي","برنامج مكافحة فيروسات مجاني","تجربة مجانية","تحديث هام",
-"يلزم اتخاذ إجراء فوري","تحسين الأمن","قم بالتثبيت الآن","آخر تحذير","سجل الدخول الآن",
-"تم رصد تسجيل دخول جديد","حساب إلكتروني","إعادة تعيين كلمة المرور","تفاصيل الدفع مطلوبة",
-"تحذير من التصيد الاحتيالي","دفع آمن","خرق أمني","تحديث أمني","التحقق من الهوية","رسالة تحذير",
-"وصول","ادخل الآن","بادر بالتحرك فوراً","تم الآن","بادر بالتحرك الآن!","فعل","الإجراء المطلوب",
-"قدّم طلبك هنا","قدم الآن","قدم طلبك الآن!","قدم طلبك عبر الإنترنت","انضم إلى العضوية","قبل فوات الأوان",
-"كونك عضواً","يشتري","اشتر مباشرة","اشتري الآن","اشتر اليوم","يتصل","مكالمة مجانية","اتصل الآن مجاناً",
-"اتصل بي","اتصل الآن!","هل يمكننا الحصول على دقيقة من وقتك؟","ألغِ الآن","يلزم الإلغاء","اطلب الآن",
-"انقر","انقر أدناه","انقر هنا للتحميل","الصفقة ستنتهي قريباً","افعل ذلك الآن","عرض حصري",
-"تاريخ الانتهاء","ينتهي العرض اليوم","النداء الأخير","للوصول الفوري","بسعر فقط","لك","يوم الجمعة الذي يسبق","أبعده","احصل عليه الآن",
-"احصل على أموالك","ابدأ الآن","عرض رائع","أسرع","في الحال","مرة واحدة في العمر","فقط",
-"رقم 1","مجاني 100%","خصم 100%","دخل إضافي","مندهش","مدهش","عرض مذهل","أشياء رائعة",
-"اندهش","كن متفاجئاً","كن مدير نفسك","أفضل صفقة","أفضل عرض","أفضل سعر","أفضل الأسعار","مبالغ طائلة",
-"علاوة","لا أستطيع العيش بدونها","توحيد الديون","ضاعف أموالك","ضاعف دخلك","تم تخفيضها بشكل كبير",
-"اكسب أموالاً إضافية","اكسب المال","توقع أن تربح","إضافي","نقود إضافية","دخل إضافي","رائع",
-"عرض رائع","سيولة نقدية سريعة","الحرية المالية","بريد ذو أولوية مجاني","انضم إلى الملايين","أقل سعر",
-"مليون دولار","ضمان استرداد الأموال","جائزة","ربح صافٍ","خالٍ من المخاطر","رضاكم مضمون","وفر حتى",
-"عرض ترويجي خاص","الأفضل","الآلاف","عرض لا يُضاهى","لا يصدق","غير محدود","مضمون بنسبة 100%",
-"بادر بالتحرك سريعاً","كما شاهدتم على","انقر هنا","هذا لن يدوم","عاجل","لن أصدق","$$$","€€€","جنيه إسترليني",
-"خصم 50%","بنك","الإفلاس","مساومة","الفواتير","مليار","مليار دولار","ملياردير","البطاقة مقبولة",
-"نقدي","مكافأة نقدية","سحب نقدي","كازينو","احصل على خصمك","الدولار","دخل إضافي"
+const suspiciousWords=[
+"verify","urgent","bank","password","free","bitcoin",
+"reset","click here","limited","act now","secure"
 ];
-const patterns=new RegExp(words.join("|"),"i");
 
-// ====== Domain Reputation ======
-function domainReputation(text){
-let match=text.match(/https?:\/\/([^\/\s]+)/);
-if(!match) return lang==='ar'?"لا يوجد دومين":"No Domain Detected";
-let domain=match[1];
-if(domain.includes(".ru")||domain.includes(".xyz")) return lang==='ar'?"نطاق عالي الخطورة":"High Risk TLD";
-if(domain.includes("xn--")) return lang==='ar'?"مريب Punycode":"Punycode Suspicious";
-if(domain.includes("secure")||domain.includes("verify")) return lang==='ar'?"تلاعب بالكلمات":"Keyword Manipulation";
-return lang==='ar'?"مجهول / متوسط الخطورة":"Unknown / Medium Risk";
+function generateIncident(){
+return "INC-"+Date.now().toString().slice(-6);
 }
 
-// ====== Set Language ======
-function setLang(l){
-lang=l;
-document.getElementById("title").innerText=texts[lang].title;
-document.getElementById("subtitle").innerText=texts[lang].subtitle;
-document.getElementById("threatLabel").innerText=texts[lang].threatLabel;
-document.getElementById("riskText").innerText=texts[lang].riskText;
-document.getElementById("statsLabel").innerText=texts[lang].statsLabel;
-document.getElementById("feedLabel").innerText=texts[lang].feedLabel;
-document.getElementById("feed").innerText=texts[lang].feedReady;
-document.getElementById("msg").placeholder=texts[lang].hoverMsg;
-playSound('switch');
-}
-
-// ====== Sounds ======
-function playSound(type){
-let audio;
-if(type==='high') audio=document.getElementById('highSound');
-else if(type==='medium') audio=document.getElementById('mediumSound');
-else if(type==='safe') audio=document.getElementById('safeSound');
-else if(type==='switch') audio=document.getElementById('switchSound');
-else if(type==='hover') audio=document.getElementById('hoverSound');
-if(audio){ audio.currentTime=0; audio.play();}
-}
-
-// ====== Speech ======
 function speak(text){
 let s=new SpeechSynthesisUtterance(text);
-s.lang=lang==='ar'?'ar-SA':'en-US';
+s.rate=0.95;s.pitch=1;s.volume=1;
 speechSynthesis.cancel();
 speechSynthesis.speak(s);
 }
 
-// ====== Analyze ======
 function analyze(){
 let t=document.getElementById("msg").value.toLowerCase();
 if(t.length<3) return;
 
 let score=0;
-if(patterns.test(t)) score+=40;
-let domainStatus=domainReputation(t);
-if(domainStatus==="High Risk TLD"||domainStatus==="نطاق عالي الخطورة") score+=25;
-if(domainStatus==="Punycode Suspicious"||domainStatus==="مريب Punycode") score+=30;
 
-let status="", classification="", advice="";
-if(score>=60){status=texts[lang].statusHigh;classification=texts[lang].classificationHigh;advice=texts[lang].adviceHigh;stats.high++;playSound('high');}
-else if(score>=30){status=texts[lang].statusMedium;classification=texts[lang].classificationMedium;advice=texts[lang].adviceMedium;stats.medium++;playSound('medium');}
-else{status=texts[lang].statusSafe;classification=texts[lang].classificationSafe;advice=texts[lang].adviceSafe;stats.safe++;playSound('safe');}
+// keyword detection
+suspiciousWords.forEach(w=>{
+if(t.includes(w)) score+=10;
+});
+
+// multi links
+let links=t.match(/https?:\/\/[^\s]+/g);
+if(links && links.length>2) score+=20;
+
+// shorteners
+if(t.includes("bit.ly")||t.includes("tinyurl")) score+=25;
+
+// credit card
+if(/\b\d{4}[- ]?\d{4}[- ]?\d{4}[- ]?\d{4}\b/.test(t)) score+=35;
+
+// html injection
+if(t.includes("<form")||t.includes("input type=")) score+=30;
+
+// unicode spoof
+if(t.includes("xn--")) score+=30;
+
+let status="";
+if(score>=80){status="HIGH RISK";stats.high++;document.body.classList.add("alertMode");}
+else if(score>=40){status="SUSPICIOUS";stats.medium++;document.body.classList.remove("alertMode");}
+else{status="SAFE";stats.safe++;document.body.classList.remove("alertMode");}
 
 document.getElementById("status").innerText=status;
 document.getElementById("score").innerText=score;
 document.getElementById("bar").style.width=score+"%";
-document.getElementById("classification").innerText=classification;
-document.getElementById("mitre").innerText="T1566, T1555"; // Example MITRE
-document.getElementById("domainRep").innerText=domainStatus;
-document.getElementById("feed").innerText=status+" ("+score+"%) - "+new Date().toLocaleTimeString();
-speak(`${status}. ${classification}. ${advice} Score ${score}%.`);
+
+let mitre=[];
+if(score>=60) mitre.push("T1566 Phishing");
+if(links) mitre.push("T1204 User Execution");
+if(t.includes("password")) mitre.push("T1555 Credentials");
+
+document.getElementById("mitre").innerText="MITRE: "+mitre.join(", ");
+
+let inc=generateIncident();
+document.getElementById("incident").innerText=inc;
+
+let log=document.getElementById("log");
+log.innerHTML+=`[${new Date().toLocaleTimeString()}] ${inc} - ${status} (${score}%)<br>`;
+
+document.getElementById("feed").innerText=
+status+" detected at "+new Date().toLocaleTimeString();
+
+speak(`${status} threat detected. Risk score ${score} percent.`);
+
 updateChart();
 }
 
-// ====== Event Listeners ======
-const msgBox=document.getElementById("msg");
-msgBox.addEventListener("input",analyze);
-msgBox.addEventListener("mouseenter",()=>{playSound('hover'); speak(texts[lang].hoverMsg);});
+document.getElementById("msg").addEventListener("input",analyze);
 
-// ====== Chart ======
 let chart=new Chart(document.getElementById("chart"),{
 type:'doughnut',
-data:{labels:['Safe','Suspicious','High Risk'],datasets:[{data:[0,0,0], backgroundColor:['#00ffb3','#ffd633','#ff4d4d']}]}
+data:{
+labels:['Safe','Suspicious','High'],
+datasets:[{data:[0,0,0],
+backgroundColor:['#00ffb3','#ffd633','#ff4d4d']}]
+}
 });
-function updateChart(){chart.data.datasets[0].data=[stats.safe,stats.medium,stats.high];chart.update();}
+function updateChart(){
+chart.data.datasets[0].data=[stats.safe,stats.medium,stats.high];
+chart.update();
+}
+
+function exportReport(){
+let data={
+stats:stats,
+timestamp:new Date(),
+};
+let blob=new Blob([JSON.stringify(data,null,2)],
+{type:"application/json"});
+let a=document.createElement("a");
+a.href=URL.createObjectURL(blob);
+a.download="Aegis_Report.json";
+a.click();
+}
+
+function toggleAdmin(){
+admin=!admin;
+alert(admin?"Admin Mode Enabled":"Admin Mode Disabled");
+}
+
 </script>
 </body>
 </html>
