--- a/index.html
+++ b/index.html
@@ -10,38 +10,37 @@
 body{
 margin:0;
 font-family:'Cairo',sans-serif;
-background:radial-gradient(circle at top,#001a12,#000);
-color:#00ffb3;
+background:radial-gradient(circle at top,#1a0000,#000);
+color:#ff1a1a;
 transition:0.5s;
 }
-header{text-align:center;padding:20px;border-bottom:1px solid #00ffb333;}
+header{text-align:center;padding:20px;border-bottom:1px solid #ff1a1a33;}
 button{
-background:#000;color:#00ffb3;border:1px solid #00ffb3;
+background:#000;color:#ff1a1a;border:1px solid #ff1a1a;
 padding:6px 14px;border-radius:8px;cursor:pointer;margin:3px;
+transition:0.3s;
 }
+button:hover{background:#ff1a1a;color:#000;box-shadow:0 0 15px #ff1a1a;}
 .container{
 max-width:1200px;margin:20px auto;padding:25px;
-background:rgba(0,20,15,0.95);
-border-radius:20px;
+background:#0a0a0a;border-radius:20px;
 }
 textarea{
 width:100%;height:140px;background:#000;
-border:2px solid #00ffb3;border-radius:15px;
-padding:15px;color:#00ffb3;font-size:15px;
+border:2px solid #ff1a1a;border-radius:15px;
+padding:15px;color:#ff1a1a;font-size:15px;
 resize:none;
 }
+textarea:focus{outline:none;box-shadow:0 0 20px #ff1a1a;}
 .card{
-background:#000;padding:20px;border-radius:15px;
-box-shadow:0 0 20px #00ffb322;margin-top:15px;
+background:#111;padding:20px;border-radius:15px;
+box-shadow:0 0 20px #ff000022;margin-top:15px;
 }
-.progress{height:12px;background:#111;border-radius:10px;margin-top:10px;}
-.bar{height:100%;width:0%;background:#00ffb3;border-radius:10px;transition:0.5s;}
-.log{max-height:150px;overflow:auto;font-size:12px;background:#111;padding:10px;border-radius:10px;}
-footer{text-align:center;padding:15px;font-size:12px;border-top:1px solid #00ffb333;}
-.alertMode{
-background:radial-gradient(circle at top,#330000,#000)!important;
-color:#ff4d4d!important;
-}
+.progress{height:12px;background:#1a1a1a;border-radius:10px;margin-top:10px;}
+.bar{height:100%;width:0%;background:#ff1a1a;border-radius:10px;transition:0.5s;}
+.log{max-height:150px;overflow:auto;font-size:12px;background:#0a0a0a;padding:10px;border-radius:10px;}
+footer{text-align:center;padding:15px;font-size:12px;border-top:1px solid #ff1a1a33;}
+.alertMode{background:radial-gradient(circle at top,#330000,#000)!important;color:#ff4d4d!important;}
 </style>
 </head>
 
@@ -49,7 +48,10 @@ color:#ff4d4d!important;
 
 <header>
 <h1>🦅 BlackFalcon SOC™</h1>
-<p>Advanced SOC Simulation Platform</p>
+<p id="subtitle">Advanced SOC Simulation Platform</p>
+
+<button onclick="setLang('en')">English</button>
+<button onclick="setLang('ar')">العربية</button>
 <button onclick="exportReport()">Export Report</button>
 </header>
 
@@ -58,27 +60,27 @@ color:#ff4d4d!important;
 <textarea id="msg" placeholder="Paste suspicious message here..."></textarea>
 
 <div class="card">
-<h3>Threat Status</h3>
+<h3 id="threatLabel">Threat Status</h3>
 <p id="status">—</p>
-<p>Risk Score: <span id="score">0</span>%</p>
+<p><span id="riskLabel">Risk Score</span>: <span id="score">0</span>%</p>
 <div class="progress"><div class="bar" id="bar"></div></div>
 <p id="mitre">MITRE: —</p>
-<p>Incident ID: <span id="incident">—</span></p>
+<p><span id="incidentLabel">Incident ID</span>: <span id="incident">—</span></p>
 </div>
 
 <div class="card">
-<h3>Threat Intelligence Feed</h3>
+<h3 id="feedLabel">Threat Intelligence Feed</h3>
 <p id="feed">System Ready...</p>
-</div>
-
-<div class="card">
-<h3>Statistics</h3>
-<canvas id="chart"></canvas>
 </div>
 
 <div class="card">
 <h3>Incident Log</h3>
 <div class="log" id="log"></div>
+</div>
+
+<div class="card">
+<h3 id="statsLabel">Statistics</h3>
+<canvas id="chart"></canvas>
 </div>
 
 </div>
@@ -87,24 +89,81 @@ color:#ff4d4d!important;
 BlackFalcon SOC™ – Enterprise Simulation Platform
 </footer>
 
+<audio id="alarmSound">
+<source src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3">
+</audio>
+
 <script>
 
+let lang="en";
 let stats={safe:0,medium:0,high:0};
 
+const texts={
+en:{
+subtitle:"Advanced SOC Simulation Platform",
+threat:"Threat Status",
+risk:"Risk Score",
+incident:"Incident ID",
+feed:"Threat Intelligence Feed",
+stats:"Statistics",
+ready:"System Ready...",
+hover:"Type your suspicious message here",
+safe:"SAFE",
+medium:"SUSPICIOUS",
+high:"HIGH RISK"
+},
+ar:{
+subtitle:"منصة محاكاة مركز العمليات الأمنية",
+threat:"حالة التهديد",
+risk:"نسبة الخطورة",
+incident:"رقم الحادثة",
+feed:"التغذية المباشرة للتهديدات",
+stats:"الإحصائيات",
+ready:"النظام جاهز...",
+hover:"اكتبي الرسالة المشبوهة هنا",
+safe:"آمن",
+medium:"مشبوه",
+high:"خطر عالي"
+}
+};
+
+function setLang(l){
+lang=l;
+document.documentElement.lang=l;
+document.body.dir=l==="ar"?"rtl":"ltr";
+document.getElementById("subtitle").innerText=texts[l].subtitle;
+document.getElementById("threatLabel").innerText=texts[l].threat;
+document.getElementById("riskLabel").innerText=texts[l].risk;
+document.getElementById("incidentLabel").innerText=texts[l].incident;
+document.getElementById("feedLabel").innerText=texts[l].feed;
+document.getElementById("statsLabel").innerText=texts[l].stats;
+document.getElementById("feed").innerText=texts[l].ready;
+document.getElementById("msg").placeholder=texts[l].hover;
+}
+
+function speak(text){
+let utter=new SpeechSynthesisUtterance(text);
+utter.rate=0.9;
+utter.pitch=1;
+utter.volume=1;
+utter.lang=lang==="ar"?"ar-SA":"en-US";
+
+let voices=speechSynthesis.getVoices();
+let selected=voices.find(v=>v.lang===utter.lang);
+if(selected) utter.voice=selected;
+
+speechSynthesis.cancel();
+speechSynthesis.speak(utter);
+}
+
 const suspiciousWords=[
-"verify","urgent","bank","password","free","bitcoin",
-"reset","click here","limited","act now","secure"
+"verify","urgent","bank","password","free","bitcoin","reset",
+"click here","limited","act now","secure",
+"تحديث الحساب","تحقق","بنك","كلمة المرور","اربح","اضغط هنا","عاجل","تأكيد الهوية"
 ];
 
 function generateIncident(){
 return "INC-"+Date.now().toString().slice(-6);
-}
-
-function speak(text){
-let s=new SpeechSynthesisUtterance(text);
-s.rate=0.95;s.pitch=1;s.volume=1;
-speechSynthesis.cancel();
-speechSynthesis.speak(s);
 }
 
 function analyze(){
@@ -114,73 +173,72 @@ if(t.length<3) return;
 let score=0;
 
 suspiciousWords.forEach(w=>{
-if(t.includes(w)) score+=10;
+if(t.includes(w.toLowerCase())) score+=10;
 });
 
 let links=t.match(/https?:\/\/[^\s]+/g);
-if(links && links.length>2) score+=20;
+if(links && links.length>1) score+=20;
 
 if(t.includes("bit.ly")||t.includes("tinyurl")) score+=25;
 
 if(/\b\d{4}[- ]?\d{4}[- ]?\d{4}[- ]?\d{4}\b/.test(t)) score+=35;
 
-if(t.includes("<form")||t.includes("input type=")) score+=30;
+let statusText="";
+if(score>=80){
+statusText=texts[lang].high;
+stats.high++;
+document.body.classList.add("alertMode");
+document.getElementById("alarmSound").play();
+}
+else if(score>=40){
+statusText=texts[lang].medium;
+stats.medium++;
+document.body.classList.remove("alertMode");
+}
+else{
+statusText=texts[lang].safe;
+stats.safe++;
+document.body.classList.remove("alertMode");
+}
 
-if(t.includes("xn--")) score+=30;
-
-let status="";
-if(score>=80){status="HIGH RISK";stats.high++;document.body.classList.add("alertMode");}
-else if(score>=40){status="SUSPICIOUS";stats.medium++;document.body.classList.remove("alertMode");}
-else{status="SAFE";stats.safe++;document.body.classList.remove("alertMode");}
-
-document.getElementById("status").innerText=status;
+document.getElementById("status").innerText=statusText;
 document.getElementById("score").innerText=score;
 document.getElementById("bar").style.width=score+"%";
 
-let mitre=[];
-if(score>=60) mitre.push("T1566 Phishing");
-if(links) mitre.push("T1204 User Execution");
-if(t.includes("password")) mitre.push("T1555 Credentials");
-
-document.getElementById("mitre").innerText="MITRE: "+mitre.join(", ");
+document.getElementById("mitre").innerText="MITRE: T1566, T1204";
 
 let inc=generateIncident();
 document.getElementById("incident").innerText=inc;
 
 let log=document.getElementById("log");
-log.innerHTML+=`[${new Date().toLocaleTimeString()}] ${inc} - ${status} (${score}%)<br>`;
+log.innerHTML+=`[${new Date().toLocaleTimeString()}] ${inc} - ${statusText} (${score}%)<br>`;
 
-document.getElementById("feed").innerText=
-status+" detected at "+new Date().toLocaleTimeString();
+document.getElementById("feed").innerText=statusText+" - "+new Date().toLocaleTimeString();
 
-speak(`${status} threat detected. Risk score ${score} percent.`);
+speak(statusText+" "+score+" percent");
 
 updateChart();
 }
 
 document.getElementById("msg").addEventListener("input",analyze);
+document.getElementById("msg").addEventListener("mouseenter",()=>{speak(texts[lang].hover);});
 
 let chart=new Chart(document.getElementById("chart"),{
 type:'doughnut',
 data:{
 labels:['Safe','Suspicious','High'],
-datasets:[{data:[0,0,0],
-backgroundColor:['#00ffb3','#ffd633','#ff4d4d']}]
+datasets:[{data:[0,0,0],backgroundColor:['#00ffb3','#ffd633','#ff4d4d']}]
 }
 });
+
 function updateChart(){
 chart.data.datasets[0].data=[stats.safe,stats.medium,stats.high];
 chart.update();
 }
 
 function exportReport(){
-let data={
-platform:"BlackFalcon SOC™",
-stats:stats,
-timestamp:new Date(),
-};
-let blob=new Blob([JSON.stringify(data,null,2)],
-{type:"application/json"});
+let data={platform:"BlackFalcon SOC™",stats:stats,timestamp:new Date()};
+let blob=new Blob([JSON.stringify(data,null,2)],{type:"application/json"});
 let a=document.createElement("a");
 a.href=URL.createObjectURL(blob);
 a.download="BlackFalcon_Report.json";
