--- a/index.html
+++ b/index.html
@@ -5,72 +5,34 @@
 <title>BlackFalcon SOC™</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
 <style>
-/* ===== Body & Animation Background ===== */
 body{
-margin:0;
-font-family:'Cairo',sans-serif;
+margin:0;font-family:'Cairo',sans-serif;
 background:linear-gradient(270deg,#001a00,#003300,#001a00);
 background-size:600% 600%;
 animation:gradientBG 15s ease infinite;
 color:#00ff7f;
 transition:0.5s;
 }
-
-/* ===== Header & Buttons ===== */
 header{text-align:center;padding:20px;border-bottom:1px solid #00ff7f33;}
-button{
-background:#000;color:#00ff7f;border:1px solid #00ff7f;
-padding:6px 14px;border-radius:8px;cursor:pointer;margin:3px;
-transition:0.3s;
-}
+button{background:#000;color:#00ff7f;border:1px solid #00ff7f;padding:6px 14px;border-radius:8px;cursor:pointer;margin:3px;transition:0.3s;}
 button:hover{background:#00ff7f;color:#000;box-shadow:0 0 20px #00ff7f;}
-
-/* ===== Container & Cards ===== */
-.container{
-max-width:1200px;margin:20px auto;padding:25px;
-background:rgba(0,20,0,0.9);
-border-radius:20px;
-animation:fadeIn 1s ease-in;
-}
-textarea{
-width:100%;height:140px;background:#000;
-border:2px solid #00ff7f;border-radius:15px;
-padding:15px;color:#00ff7f;font-size:15px;resize:none;
-transition:0.3s;
-}
+.container{max-width:1200px;margin:20px auto;padding:25px;background:rgba(0,20,0,0.9);border-radius:20px;animation:fadeIn 1s ease-in;}
+textarea{width:100%;height:140px;background:#000;border:2px solid #00ff7f;border-radius:15px;padding:15px;color:#00ff7f;font-size:15px;resize:none;transition:0.3s;}
 textarea:focus{outline:none;box-shadow:0 0 20px #00ff7f;}
 textarea:hover{transform:scale(1.02);}
-.card{
-background:#001a00;padding:20px;border-radius:15px;
-box-shadow:0 0 20px #00ff7f22;margin-top:15px;
-animation:cardPulse 5s ease-in-out infinite;
-}
+.card{background:#001a00;padding:20px;border-radius:15px;box-shadow:0 0 20px #00ff7f22;margin-top:15px;animation:cardPulse 5s ease-in-out infinite;}
 .progress{height:12px;background:#003300;border-radius:10px;margin-top:10px;}
 .bar{height:100%;width:0%;background:#00ff7f;border-radius:10px;transition:1s ease;width:0%;box-shadow:0 0 10px #00ff7f;}
+.log{max-height:150px;overflow:auto;font-size:12px;background:#0a0a0a;padding:10px;border-radius:10px;}
 footer{text-align:center;padding:15px;font-size:12px;border-top:1px solid #00ff7f33;}
 .alertMode{background:linear-gradient(270deg,#003300,#001a00,#003300)!important;color:#00ff7f!important;}
-
-/* ===== Animations ===== */
-@keyframes gradientBG{
-0%{background-position:0% 50%;}
-50%{background-position:100% 50%;}
-100%{background-position:0% 50%;}
-}
-@keyframes fadeIn{
-0%{opacity:0;transform:translateY(10px);}
-100%{opacity:1;transform:translateY(0);}
-}
-@keyframes cardPulse{
-0%,100%{box-shadow:0 0 15px #00ff7f22;}
-50%{box-shadow:0 0 35px #00ff7f44;}
-}
+@keyframes gradientBG{0%{background-position:0% 50%;}50%{background-position:100% 50%;}100%{background-position:0% 50%;}}
+@keyframes fadeIn{0%{opacity:0;transform:translateY(10px);}100%{opacity:1;transform:translateY(0);}}
+@keyframes cardPulse{0%,100%{box-shadow:0 0 15px #00ff7f22;}50%{box-shadow:0 0 35px #00ff7f44;}}
 </style>
 </head>
-
 <body>
-
 <header>
 <h1>🦅 BlackFalcon SOC™</h1>
 <p id="subtitle">Advanced SOC Simulation Platform</p>
@@ -80,7 +42,6 @@ footer{text-align:center;padding:15px;font-size:12px;border-top:1px solid #00ff7
 </header>
 
 <div class="container">
-
 <textarea id="msg" placeholder="Paste suspicious message here..."></textarea>
 
 <div class="card">
@@ -106,23 +67,48 @@ footer{text-align:center;padding:15px;font-size:12px;border-top:1px solid #00ff7
 <h3 id="statsLabel">Statistics</h3>
 <canvas id="chart"></canvas>
 </div>
-
 </div>
 
-<footer>
-BlackFalcon SOC™ – Enterprise Simulation Platform
-</footer>
-
+<footer>BlackFalcon SOC™ – Enterprise Simulation Platform</footer>
 <audio id="alarmSound"><source src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3"></audio>
 
 <script>
 let lang="en";
 let stats={safe:0,medium:0,high:0};
+let debounceTimer=null;
 
 const texts={
 en:{subtitle:"Advanced SOC Simulation Platform",threat:"Threat Status",risk:"Risk Score",incident:"Incident ID",feed:"Threat Intelligence Feed",stats:"Statistics",ready:"System Ready...",hover:"Type your suspicious message here",safe:"SAFE",medium:"SUSPICIOUS",high:"HIGH RISK"},
 ar:{subtitle:"منصة محاكاة مركز العمليات الأمنية",threat:"حالة التهديد",risk:"نسبة الخطورة",incident:"رقم الحادثة",feed:"التغذية المباشرة للتهديدات",stats:"الإحصائيات",ready:"النظام جاهز...",hover:"اكتبي الرسالة المشبوهة هنا",safe:"آمن",medium:"مشبوه",high:"خطر عالي"}
 };
+
+// ===== قائمة الكلمات القديمة الكاملة =====
+const suspiciousWords=[
+"قم بالدخول إلى حسابك","تحديث الحساب","الإجراء المطلوب","فعّل الآن","مضاد للفيروسات",
+"تغيير كلمة المرور","انقر للتحقق","أكد بياناتك","معلومات سرية","سايبر مونداي","اختراق البيانات",
+"حمل الآن","إشعار نهائي","برنامج مكافحة فيروسات مجاني","تجربة مجانية","تحديث هام",
+"يلزم اتخاذ إجراء فوري","تحسين الأمن","قم بالتثبيت الآن","آخر تحذير","سجل الدخول الآن",
+"تم رصد تسجيل دخول جديد","حساب إلكتروني","إعادة تعيين كلمة المرور","تفاصيل الدفع مطلوبة",
+"تحذير من التصيد الاحتيالي","دفع آمن","خرق أمني","تحديث أمني","التحقق من الهوية","رسالة تحذير",
+"وصول","ادخل الآن","بادر بالتحرك فوراً","تم الآن","بادر بالتحرك الآن!","فعل","الإجراء المطلوب",
+"قدّم طلبك هنا","قدم الآن","قدم طلبك الآن!","قدم طلبك عبر الإنترنت","انضم إلى العضوية","قبل فوات الأوان",
+"كونك عضواً","يشتري","اشتر مباشرة","اشتري الآن","اشتر اليوم","يتصل","مكالمة مجانية","اتصل الآن مجاناً",
+"اتصل بي","اتصل الآن!","هل يمكننا الحصول على دقيقة من وقتك؟","ألغِ الآن","يلزم الإلغاء","اطلب الآن",
+"انقر","انقر أدناه","انقر هنا للتحميل","الصفقة ستنتهي قريباً","افعل ذلك الآن","عرض حصري",
+"تاريخ الانتهاء","ينتهي العرض اليوم","النداء الأخير","للوصول الفوري","بسعر فقط","لك","يوم الجمعة الذي يسبق","أبعده","احصل عليه الآن",
+"احصل على أموالك","ابدأ الآن","عرض رائع","أسرع","في الحال","مرة واحدة في العمر","فقط",
+"رقم 1","مجاني 100%","خصم 100%","دخل إضافي","مندهش","مدهش","عرض مذهل","أشياء رائعة",
+"اندهش","كن متفاجئاً","كن مدير نفسك","أفضل صفقة","أفضل عرض","أفضل سعر","أفضل الأسعار","مبالغ طائلة",
+"علاوة","لا أستطيع العيش بدونها","توحيد الديون","ضاعف أموالك","ضاعف دخلك","تم تخفيضها بشكل كبير",
+"اكسب أموالاً إضافية","اكسب المال","توقع أن تربح","إضافي","نقود إضافية","دخل إضافي","رائع",
+"عرض رائع","سيولة نقدية سريعة","الحرية المالية","بريد ذو أولوية مجاني","انضم إلى الملايين","أقل سعر",
+"مليون دولار","ضمان استرداد الأموال","جائزة","ربح صافٍ","خالٍ من المخاطر","رضاكم مضمون","وفر حتى",
+"عرض ترويجي خاص","الأفضل","الآلاف","عرض لا يُضاهى","لا يصدق","غير محدود","مضمون بنسبة 100%",
+"بادر بالتحرك سريعاً","كما شاهدتم على","انقر هنا","هذا لن يدوم","عاجل","لن أصدق","$$$","€€€","جنيه إسترليني",
+"خصم 50%","بنك","الإفلاس","مساومة","الفواتير","مليار","مليار دولار","ملياردير","البطاقة مقبولة",
+"نقدي","مكافأة نقدية","سحب نقدي","كازينو","احصل على خصمك","الدولار","دخل إضافي",
+"verify","urgent","bank","password","free","bitcoin","reset","click here","limited","act now","secure"
+];
 
 function setLang(l){
 lang=l;
@@ -148,15 +134,16 @@ if(selected)utter.voice=selected;
 speechSynthesis.cancel();speechSynthesis.speak(utter);
 }
 
-const suspiciousWords=["verify","urgent","bank","password","free","bitcoin","reset","click here","limited","act now","secure","تحديث الحساب","تحقق","بنك","كلمة المرور","اربح","اضغط هنا","عاجل","تأكيد الهوية"];
-
 function generateIncident(){return "INC-"+Date.now().toString().slice(-6);}
 
-function analyze(){
+// ===== تحليل الرسالة مع Debounce =====
+function analyzeMessage(){
 let t=document.getElementById("msg").value.toLowerCase();
-if(t.length<3) return;
+if(t.length<3) return "";
 
-let score=0;suspiciousWords.forEach(w=>{if(t.includes(w.toLowerCase())) score+=10;});
+let score=0;
+suspiciousWords.forEach(w=>{if(t.includes(w.toLowerCase())) score+=10;});
+
 let links=t.match(/https?:\/\/[^\s]+/g);
 if(links && links.length>1) score+=20;
 if(t.includes("bit.ly")||t.includes("tinyurl")) score+=25;
@@ -174,8 +161,16 @@ document.getElementById("mitre").innerText="MITRE: T1566, T1204";
 let inc=generateIncident();document.getElementById("incident").innerText=inc;
 document.getElementById("feed").innerText=statusText+" - "+new Date().toLocaleTimeString();
 document.getElementById("log").innerHTML+=`[${new Date().toLocaleTimeString()}] ${inc} - ${statusText} (${score}%)<br>`;
-speak(statusText+" "+score+" percent");
 updateChart();
+return statusText+" - "+score+"%";
+}
+
+function analyze(){
+clearTimeout(debounceTimer);
+debounceTimer=setTimeout(()=>{
+let result=analyzeMessage();
+if(result) speak(result);
+},700);
 }
 
 document.getElementById("msg").addEventListener("input",analyze);
